--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -29,7 +29,14 @@
                 <em style="color: #888;">Not Linked</em>
                 {% endif %}
             </td>
-            <td>{{ user.primary_role_name }}</td>
+            <td>
+                {% set role = user.primary_role %}
+                {% set role_class = 'role-' ~ role.award_category if (role and role.award_category) else 'role-other' %}
+                {% if role and role.type == 'officer' %}
+                    {% set role_class = 'role-officer' %}
+                {% endif %}
+                <span class="roster-role-tag {{ role_class }}">{{ user.primary_role_name }}</span>
+            </td>
             <td>{{ user.created_at.strftime('%Y-%m-%d') if user.created_at else '' }}</td>
             <td>
                 <div class="action-links">
