--- a/app/static/css/pages/agenda/agenda-base.css
+++ b/app/static/css/pages/agenda/agenda-base.css
@@ -618,7 +618,9 @@ td.actions-column {
 	border-bottom: none;
 	border-top: none;
 	z-index: 99;
-	top: 100%;
+	z-index: 99;
+	top: auto;
+	bottom: 0;
 	left: 0;
 	min-width: 100%;
 	width: max-content;
