--- a/app/static/css/pages/booking/booking-mobile.css
+++ b/app/static/css/pages/booking/booking-mobile.css
@@ -211,4 +211,10 @@
 		width: 100%;
 		padding: 0;
 	}
+
+	/* Fix dropdown clipping by aligning to right */
+	.booking-table .autocomplete-results {
+		left: auto;
+		right: 0;
+	}
 }
